--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -1,49 +1,49 @@
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-:root{
+:root {
     --blue-dark: #0f2032;
     --blue-darker: #04172b;
     --gray-light: #afafae;
     --bone-white: #fdfcfb;
 }
 
-html{
+html {
     height: 100%;
 }
 
-body{
+body {
     background-color: var(--blue-dark);
     color: var(--bone-white);
     font-family: system-ui, sans-serif;
     height: 100%;
 }
 
-.main-grid{
+.main-grid {
     display: grid;
     grid-template-rows: auto 1fr auto;
     width: 100%;
     height: 100%;
 }
 
-header{
+header {
     padding: 1rem;
     max-width: 1000px;
     width: 100%;
     margin: 0 auto;
 }
 
-.main-container{
+.main-container {
     border-top: 2px solid var(--gray-light);
     border-bottom: 2px solid var(--gray-light);
     width: 100%;
 }
 
-main{
+main {
     padding: 2rem;
     max-width: 1000px;
     width: 100%;
@@ -55,12 +55,35 @@ main{
     gap: 25px;
 }
 
-.footer-container{
+.tictactoe-container {
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    gap: 5px;
+    margin: 2rem auto;
+    justify-content: center;
+}
+
+.cell {
+    width: 100px;
+    height: 100px;
+    background-color: #1f2937;
+    color: white;
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    user-select: none;
+    border-radius: 6px;
+}
+
+
+.footer-container {
     width: 100%;
     background-color: var(--blue-darker);
 }
 
-footer{
+footer {
     display: flex;
     justify-content: center;
     padding: 1rem;
